--- a/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
+++ b/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
@@ -152,7 +152,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="greatest_common_divisor.h" />
+    <ClInclude Include="helper.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="random.h" />
+    <ClInclude Include="sort.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ComputationalAlgorithms.cpp" />
@@ -163,6 +166,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="random.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
