--- a/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj.filters
+++ b/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj.filters
@@ -21,6 +21,15 @@
     <ClInclude Include="greatest_common_divisor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="random.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -28,6 +37,9 @@
     </ClCompile>
     <ClCompile Include="ComputationalAlgorithms.cpp" />
     <ClCompile Include="greatest_common_divisor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="random.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
