--- a/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
+++ b/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
@@ -106,6 +106,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -151,9 +152,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="djikstra.h" />
     <ClInclude Include="greatest_common_divisor.h" />
     <ClInclude Include="helper.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="graph.h" />
+    <ClInclude Include="prim.h" />
     <ClInclude Include="random.h" />
     <ClInclude Include="sort.h" />
   </ItemGroup>
@@ -166,6 +170,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="graph.cpp" />
     <ClCompile Include="random.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
