--- a/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
+++ b/ComputationalAlgorithms/ComputationalAlgorithms.vcxproj
@@ -155,10 +155,12 @@
     <ClInclude Include="djikstra.h" />
     <ClInclude Include="greatest_common_divisor.h" />
     <ClInclude Include="helper.h" />
+    <ClInclude Include="matrix.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="graph.h" />
     <ClInclude Include="prim.h" />
     <ClInclude Include="random.h" />
+    <ClInclude Include="chain_matrix_multiplication.h" />
     <ClInclude Include="sort.h" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +174,7 @@
     </ClCompile>
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="random.cpp" />
+    <ClCompile Include="chain_matrix_multiplication.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
